타이틀 변경

--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -15,7 +15,7 @@
     <!--<script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>-->
     {% block script %}
     {% endblock %}
-    <title>Hello, pybo!</title>
+    <title>pybo</title>
 </head>
 <body>
 <!-- 네비게이션바 -->
